osmproxy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: osmproxy
  labels:
    app.kubernetes.io/version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: osmproxy
  template:
    metadata:
      labels:
        app: osmproxy
        app.kubernetes.io/version: v1
    spec:
      containers:
        - name: osmproxy
          image: ghcr.io/noeulnight/osmproxy:latest
          ports:
            - containerPort: 3000
