osmproxy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: osmproxy-service
  labels:
    app.kubernetes.io/name: osmproxy-service
    app.kubernetes.io/part-of: osmproxy
spec:
  selector:
    app: osmproxy
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
